--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,32 +1,2 @@
-<mat-tab-group>
-    <mat-tab label="User"> 
-        <h1 >User Login </h1>
-        <div class="example-container">
-            <mat-form-field>
-              <mat-label>Enter your email</mat-label>
-              <input
-                matInput
-                placeholder="pat@example.com"
-                required
-              />
-   
-            </mat-form-field>
-            <mat-form-field>
-                <mat-label>Enter your password</mat-label>
-                <input matInput [type]="hide() ? 'password' : 'text'" />
-                <button
-                  mat-icon-button
-                  matSuffix
-                  (click)="clickEvent($event)"
-                  [attr.aria-label]="'Hide password'"
-                  [attr.aria-pressed]="hide()"
-                >
-                  <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-              </mat-form-field>
-          </div>
-          
-    </mat-tab>
-    <mat-tab label="Admin"> Admin Login </mat-tab>
-</mat-tab-group>
-  
+<mat-icon aria-hidden="false" aria-label="Home icon" fontIcon="home" (click)="logout()">home</mat-icon>
+<mat-icon aria-hidden="false" aria-label="Logout icon" fontIcon="logout" (click)="logout()">logout</mat-icon>
